--- a/src/Formee/FrontEnd/Admins/Admins.Web/Pages/Users/Upsert.razor
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/Pages/Users/Upsert.razor
@@ -41,12 +41,33 @@
 </EditForm>
 
 @code {
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationState { get; set; }
+
     private AddRoleToUser _userRoleModel = new();
     private bool _isFetching;
 
     protected override async Task OnParametersSetAsync()
     {
         var baseUrl = new Uri(Configuration.GetValue<string>("GatewayUrl"));
+
+        var authState = await AuthenticationState;
+
+        if (authState.User.Identity.IsAuthenticated)
+        {
+            const string typeName = "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier";
+
+            var authId = authState.User
+                .Claims
+                .FirstOrDefault(c => c.Type == typeName)
+                ?.Value;
+
+            var accessToken = await HttpClient
+                .GetFromJsonAsync<string>($"/gateway/identity/users/{authId}");
+
+            HttpClient.DefaultRequestHeaders.Authorization = new
+                AuthenticationHeaderValue("Bearer", accessToken);
+        }
 
         HttpClient.BaseAddress = baseUrl;
     }
