--- a/src/Formee/FrontEnd/Admins/Admins.Web/_Imports.razor
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Headers
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -10,3 +11,4 @@
 @using Admins.Web
 @using Admins.Web.Shared
 @using Admins.Web.Dtos.Users
+
