--- a/src/Formee/FrontEnd/Users/Web.Components/Components/Identity/AppBarAccessControl.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/Components/Identity/AppBarAccessControl.razor
@@ -16,7 +16,7 @@
                          style="cursor: pointer;">
                         @if (!string.IsNullOrEmpty(_appState.Identity.User.Avatar.Name))
                         {
-                            var avatarUrl = $"https://adoptingmsastorage.blob.core.windows.net/accountavatars/{_appState.Identity.User.Avatar.Name}";
+                            var avatarUrl = $"https://formeestorage.blob.core.windows.net/formeeavatars/{_appState.Identity.User.Avatar.Name}";
 
                             var style = $"background-image: url({avatarUrl})";
 
