--- a/src/Formee/FrontEnd/Users/Web.Components/Shared/IdentityLayout.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/Shared/IdentityLayout.razor
@@ -2,9 +2,7 @@
 
 @inject NavigationManager NavigationManager
 
-<SfButton OnClick="BeginSignOut">logout</SfButton>
-
-<main>
+<main style="padding-inline: 10rem;">
     @Body
 </main>
 
