--- a/src/Formee/FrontEnd/Admins/Admins.Web/Pages/Index.razor
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/Pages/Index.razor
@@ -1,9 +1,43 @@
 ﻿@page "/"
 
+@inject NavigationManager NavigationManager
+
 @attribute [Authorize]
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to the admins dashboard</h1>
 
-Welcome to your new app.
+<p class="lead">
+    Welcome to the dashboard.
+</p>
+
+@code {
+    [Parameter]
+    [SupplyParameterFromQuery(Name = "auth_id")]
+    public string AuthId { get; set; }
+
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationState { get; set; }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        var authState = await AuthenticationState;
+
+        if (authState.User.Identity.IsAuthenticated)
+        {
+            if (string.IsNullOrEmpty(AuthId))
+            {
+                const string typeName = "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier";
+
+                var authId = authState.User
+                    .Claims
+                    .FirstOrDefault(c => c.Type == typeName)
+                    ?.Value;
+
+                var route = $"{NavigationManager.BaseUri}?auth_id={authId}";
+                NavigationManager.NavigateTo(route);
+            }
+        }
+    }
+}
