--- a/src/Formee/FrontEnd/Users/Web.Components/Components/Notifications/AppBarNotification.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/Components/Notifications/AppBarNotification.razor
@@ -12,7 +12,7 @@
                     class="fm-sidebar__icon"
                     @onclick="HandleButtonClick">
                 <span class="e-badge e-badge-success e-badge-notification e-badge-overlap">
-                    @_appState.Notifications.NotificationsCollection.Count
+                    @_appState.Notifications.NotificationsCollection.Count(n => n.IsRead == false)
                 </span>
             </SfIcon>
         </SfTooltip>
