--- a/src/Formee/FrontEnd/Users/Web.Components/Shared/MainLayout.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/Shared/MainLayout.razor
@@ -13,72 +13,82 @@
             <FmTypography Text="Formee"
                           Type="@Typography.LevelOne"
                           TextAlign="center"
-                          Classes="fm-motto mb-3"/>
+                          Classes="fm-motto mb-3" />
             @if (AppState.Identity.User.Id != Guid.Empty)
             {
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="Home">
+                       Content="Home">
                     <FmLink Route="@($"?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            Text="Home"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-home"/>
+                        ActiveClass="fm-link__active"
+                        Text="Home"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-home" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My Containers">
+                       Content="My Containers">
                     <FmLink Route="@($"{Routes.Containers}?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            MatchRoute="NavLinkMatch.Prefix"
-                            Text="Containers"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-boxes-stacked"/>
+                        ActiveClass="fm-link__active"
+                        MatchRoute="NavLinkMatch.Prefix"
+                        Text="Containers"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-boxes-stacked" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My Sites">
+                       Content="My Sites">
                     <FmLink Route="@($"{Routes.Sites}?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            MatchRoute="NavLinkMatch.Prefix"
-                            Text="Sites"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-window-restore"/>
+                        ActiveClass="fm-link__active"
+                        MatchRoute="NavLinkMatch.Prefix"
+                        Text="Sites"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-window-restore" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My Links">
+                       Content="My Forms">
+                    <FmLink Route="@($"{Routes.Forms}?user_id={AppState.Identity.User.Id}&site_id=3")"
+                        ActiveClass="fm-link__active"
+                        MatchRoute="NavLinkMatch.Prefix"
+                        Text="Sites"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-envelope" />
+                </SfTooltip>
+
+                <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
+                       Content="My Links">
                     <FmLink Route="@($"{Routes.Links}?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            Text="Links"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-arrow-up-right-from-square"/>
+                        ActiveClass="fm-link__active"
+                        Text="Links"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-arrow-up-right-from-square" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My Profile">
+                       Content="My Profile">
                     <FmLink Route="@($"{Routes.Identity}?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            Text="Identity Management"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-user"/>
+                        ActiveClass="fm-link__active"
+                        Text="Identity Management"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-user" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My Subscription">
+                       Content="My Subscription">
                     <FmLink Route="/subscription"
-                            ActiveClass="fm-link__active"
-                            Text="Subscription"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-credit-card"/>
+                        ActiveClass="fm-link__active"
+                        Text="Subscription"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-credit-card" />
                 </SfTooltip>
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.RightCenter"
-                           Content="My History">
+                       Content="My History">
                     <FmLink Route="@($"{Routes.History}?user_id={AppState.Identity.User.Id}")"
-                            ActiveClass="fm-link__active"
-                            Text="History"
-                            Classes="fm-link d-flex justify-content-center mb-3"
-                            Icon="fa-solid fa-clock-rotate-left"/>
+                        ActiveClass="fm-link__active"
+                        Text="History"
+                        Classes="fm-link d-flex justify-content-center mb-3"
+                        Icon="fa-solid fa-clock-rotate-left" />
                 </SfTooltip>
             }
             else
@@ -95,11 +105,11 @@
             @if (!string.IsNullOrEmpty(AppState.Identity.User.UserName))
             {
                 <FmTypography Text="@($"Hello, {AppState.Identity.User.UserName}")"
-                              Type="@Typography.LevelOne"
-                              Classes="fm-typography__display-1"/>
+                          Type="@Typography.LevelOne"
+                          Classes="fm-typography__display-1" />
             }
 
-            <AppBarSpacer/>
+            <AppBarSpacer />
 
             <div class="d-flex justify-content-center align-items-center">
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.BottomCenter"
@@ -109,13 +119,13 @@
                         {
                             <span class="fm-connection-status fm-bg-color__success"></span>
                             <FmTypography Text="Connected"
-                                          Classes="fm-typography__lead ml-1"/>
+                                      Classes="fm-typography__lead ml-1" />
                         }
                         else
                         {
                             <span class="fm-connection-status fm-bg-color__danger"></span>
                             <FmTypography Text="Disconnected"
-                                          Classes="fm-typography__lead ml-1"/>
+                                      Classes="fm-typography__lead ml-1" />
                         }
                     </div>
                 </SfTooltip>
@@ -123,7 +133,7 @@
         </div>
     </SfAppBar>
 
-    <FmSpacer/>
+    <FmSpacer />
 
     <main class="main-content__wrapper">
         <ErrorBoundary>
@@ -145,30 +155,45 @@
             <div class="d-flex justify-content-between align-items-center">
                 @if (AppState.Identity.User.Id != Guid.Empty)
                 {
-                    <AppBarNotification/>
+                    <AppBarNotification />
                 }
 
                 <SfTooltip Position="Syncfusion.Blazor.Popups.Position.BottomCenter"
                            Content="Settings">
                     <SfIcon IconCss="fa-solid fa-gear"
-                            class="fm-sidebar__icon"/>
+                            class="fm-sidebar__icon" />
                 </SfTooltip>
 
                 <div>
                     @if (AppState.Identity.User.Id != Guid.Empty)
                     {
-                        <AppBarAccessControl/>
+                        <AppBarAccessControl />
                     }
                 </div>
             </div>
 
-            <div>
+            <div class="notifications-list__container">
                 @if (AppState.Notifications.NotificationsCollection is not null)
                 {
-                    foreach (var notification in AppState.Notifications.NotificationsCollection)
-                    {
-                        <p>@notification.Heading</p>
-                    }
+                    var lastNotification = AppState.Notifications.NotificationsCollection.LastOrDefault();
+
+                    <ul class="notifications-list__wrapper">
+                        @foreach (var notification in AppState.Notifications.NotificationsCollection)
+                        {
+                            <li>
+                                <p>
+                                    @notification.Heading
+                                </p>
+                            </li>
+
+                            if(notification != lastNotification)
+                            {
+                                <FmSeperator />
+                            }
+
+                        }
+                    </ul>
+
                 }
                 else
                 {
@@ -179,7 +204,7 @@
     </ChildContent>
 </SfSidebar>
 
-<FmSpacer/>
+<FmSpacer />
 
 <AuthorizeView>
     <AggregateUserIdentity />
