--- a/src/Formee/FrontEnd/Users/Web.Components/Shared/MainLayout.razor.css
+++ b/src/Formee/FrontEnd/Users/Web.Components/Shared/MainLayout.razor.css
@@ -37,9 +37,27 @@
     animation: connection-status-animation 1s ease infinite alternate;
 }
 
+.notifications-list__container {
+    overflow: hidden;
+}
 
-@keyframes connection-status-animation {
-    from {
+.notifications-list__wrapper {
+    background-color: var(--color-primary);
+    border-radius: 7px;
+    padding: 1rem;
+    height: 30vh;
+    overflow: hidden;
+}
+
+    .notifications-list__wrapper li {
+        font-size: 1rem;
+        list-style: none;
+        color: var(--color-text);
+    }
+
+
+    @keyframes connection-status-animation {
+        from {
         transform: scale(0.8);
     }
     to {
