--- a/src/Formee/FrontEnd/Users/Web.Components/_Imports.razor
+++ b/src/Formee/FrontEnd/Users/Web.Components/_Imports.razor
@@ -30,8 +30,9 @@
 @using Clients.Web.Components.Components.Navigators;
 @using Clients.Web.Components.Components.Typography;
 @using Clients.Web.Components.Components.Forms;
-@using Clients.Web.Components.Components.Modals
-@using Clients.Web.Components.Shared
+@using Clients.Web.Components.Components.Modals;
+@using Clients.Web.Components.Components.Domain;
+@using Clients.Web.Components.Shared;
 
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.Forms;
